--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,16 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "date-fns": "^2.28.0",
+    "firebase": "^9.18.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "otp-input-react": "^0.3.0",
+    "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.7.1",
+    "react-phone-input-2": "^2.15.1"
   },
   "scripts": {
     "start": "react-scripts start",
