--- a/backend/package.json
+++ b/backend/package.json
@@ -15,10 +15,12 @@
     "bcrypt": "^5.0.1",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.1",
     "http": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.6",
+    "multer": "^1.4.5-lts.1",
     "validator": "^13.7.0"
   }
 }
